send files works

--- a/app/src/main/resources/za/jvexpress/app/template/index.html
+++ b/app/src/main/resources/za/jvexpress/app/template/index.html
@@ -2,5 +2,7 @@
 
 <body>
 <h1>HI From JVEXPRESS</h1>
+<p>this jvexpress a quick rest framework</p>
+<img src="/public/image.jpg" alt=""/>
 </body>
 </html>
